Form item alignment fixes

--- a/style.scss
+++ b/style.scss
@@ -1954,6 +1954,13 @@ a.art-search-button {
     cursor: pointer;
 }
 
+#webform-client-form-10386 {
+    h5,
+    .form-item {
+        margin: 1em 2.5%;
+    }
+}
+
 a.art-search-button span.art-search-button-text {
     display: none;
 }
